Tue Mar 20 19:38:17 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Messenger_IOGR_Imr:
        * tests/DCPS/Messenger_IOGR_Imr/Aggregator.h:
        * tests/DCPS/Messenger_IOGR_Imr/Aggregator.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/DataReaderListener.h:
        * tests/DCPS/Messenger_IOGR_Imr/DataReaderListener.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/Messenger.idl:
        * tests/DCPS/Messenger_IOGR_Imr/Messenger_IOGR_Imr.mpc:
        * tests/DCPS/Messenger_IOGR_Imr/README:
        * tests/DCPS/Messenger_IOGR_Imr/Writer.h:
        * tests/DCPS/Messenger_IOGR_Imr/Writer.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/domain_ids:
        * tests/DCPS/Messenger_IOGR_Imr/pub.ini:
        * tests/DCPS/Messenger_IOGR_Imr/publisher.cpp:
        * tests/DCPS/Messenger_IOGR_Imr/run_test.pl:
        * tests/DCPS/Messenger_IOGR_Imr/sub.ini:
        * tests/DCPS/Messenger_IOGR_Imr/subscriber.cpp:
          New test to demonstrate multiple InfoRepo objects being
          presented as a single IOGR. This test is currently incomplete.

Tue Mar 20 16:47:32 UTC 2007  Ciju John  <johnc@ociweb.com>

        * DevGuideExamples/DDS/Messenger/run_test.pl:
          Add debug messages.

        * tests/DCPS/BuiltInTopic/main.cpp:
          Remove empty line.

        * tests/DCPS/Messenger_Imr/run_test.pl:
          No need for a timed kill. A timed kill produces an error message
          which threw havoc on the nightly test run.

Tue Mar 20 13:51:51 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          Fixed bugs in yesterday's check-in of this file.

Mon Mar 19 19:14:34 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/auto_run_tests.pl:

          When running an executable directly (no run_test.pl), we need to take
          into account the -ExeSubDir setting.

Mon Mar 19 14:48:21 UTC 2007  Ciju John  <johnc@ociweb.com>

        * tests/DCPS/Messenger_Imr/pub.ini: